[package]
name = "rust-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libs"
path = "src/lib.rs"

[dependencies]
mime = "0.3.16"
actix-cors = "0.6.3"
actix-web = { version = "4.2.1", default-features = false, features = ["macros", "compress-brotli", "compress-gzip", "cookies", "rustls"] }
actix-multipart = "0.6.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
bincode = "1.3.3"
multipart = "0.18.0"
tempfile = "3.4.0"